Fixed Links on site

--- a/index.html
+++ b/index.html
@@ -16,14 +16,12 @@
     <header>
       <div class="container">
         <h1>360 B#&#39;s Team Page</h1>
-        <h2>By: Chris, Richard, Shawn, Nick, Joan</h2>
+        <h2>Site Organized by: Chris Kubec, Richard Ung, Shawn, Nick, Joan</h2>
 
         <section id="downloads">
             <a href="https://drive.google.com/open?id=14s_EoSfx4mttByG9VsCFye0sSvvpw26NCN2BVI-EUN8" class="btn">Task Matrix</a>
             <a href="https://drive.google.com/open?id=1PyA8WkdBkW-8ThfyVVin4gJ29vQl32bkq0VdH4oFaPA" class="btn">Minutes</a>
-            <a href="https://github.com/ckubec/360Project/zipball/master" class="btn">Download as .zip</a>
-            <a href="https://github.com/ckubec/360Project/tarball/master" class="btn">Download as .tar.gz</a>
-            <a href="https://github.com/ckubec/360Project" class="btn btn-github"><span class="icon"></span>View on GitHub</a>
+            <a href="https://github.com/ClassProject360/360Project" class="btn btn-github"><span class="icon"></span>View Team GitHub</a>
         </section>
       </div>
     </header>
