--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <header>
       <div class="container">
         <h1>360 B#&#39;s Team Page</h1>
-        <h2>Site Organized by: Chris Kubec, Richard Ung, Shawn, Nick, Joan</h2>
+        <h2>Site Organized by: Chris Kubec, Richard Ung, Shawn Massoud, Nick Mana, Joan Jones</h2>
 
         <section id="downloads">
             <a href="https://drive.google.com/open?id=14s_EoSfx4mttByG9VsCFye0sSvvpw26NCN2BVI-EUN8" class="btn">Task Matrix</a>
