--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
             <a href="https://drive.google.com/open?id=14s_EoSfx4mttByG9VsCFye0sSvvpw26NCN2BVI-EUN8" class="btn">Task Matrix</a>
             <a href="https://drive.google.com/open?id=1PyA8WkdBkW-8ThfyVVin4gJ29vQl32bkq0VdH4oFaPA" class="btn">Minutes</a>
             <a href="https://drive.google.com/open?id=1m7w5If3vnT1M1ruxLibzdyOSmA-YajO4mrF24eBcV6Q" class="btn">Deliverable 1</a>
+            <a href="https://drive.google.com/open?id=0B3kGd9EcJLCpWjRfbDVSN3o1d18wdFVZc0F6bUM3dmR6OEl3" class="btn">Check In Diagram</a>
             <a href="https://github.com/ClassProject360/360Project" class="btn btn-github"><span class="icon"></span>View Team GitHub</a>
         </section>
       </div>
